samples/_failures_safe/1761210460_f9ae4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e763bcaa.c: In function ‘main’:
./samples/SAFE/__tmp_e763bcaa.c:140:26: error: missing terminating " character
  140 |     mat1.cols = read_int("  Columns
      |                          ^~~~~~~~~~
./samples/SAFE/__tmp_e763bcaa.c:140:5: error: expected expression at end of input
  140 |     mat1.cols = read_int("  Columns
      |     ^~~~
./samples/SAFE/__tmp_e763bcaa.c:140:17: error: too few arguments to function ‘read_int’
  140 |     mat1.cols = read_int("  Columns
      |                 ^~~~~~~~
./samples/SAFE/__tmp_e763bcaa.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e763bcaa.c:140:5: error: expected declaration or statement at end of input
  140 |     mat1.cols = read_int("  Columns
      |     ^~~~
